master: fix shift

--- a/src/containers/Game/style.module.scss
+++ b/src/containers/Game/style.module.scss
@@ -16,7 +16,7 @@
 
 .card {
     width: 92%;
-    height: 550px;
+    height: 450px;
     border-radius: 30px;
     box-shadow: 0 0 2px rgba(0, 0, 0, .8);
     background: #e2e2e2;
